# MANTIS

./: .env.example  .gitignore  Cargo.toml  config.toml
src/: config.rs  main.rs
src/arb/: kalshi.rs  mod.rs  scanner.rs
src/dashboard/: tui.rs
src/feeds/: clob_ws.rs  gamma.rs  mod.rs  rtds_binance.rs  rtds_chainlink.rs
src/maker/: engine.rs  fee.rs  inventory.rs  mod.rs  quoter.rs  rebate.rs  replacer.rs
src/markets/: state.rs
src/risk/: drawdown.rs  kelly.rs  mod.rs  regime.rs
src/signal/: claude.rs  consensus.rs  copy_scanner.rs  flash.rs  groq.rs  mod.rs  whale.rs
src/trader/: executor.rs  merger.rs  mod.rs  monitor.rs  redeemer.rs  risk.rs  task.rs
systemd/: mantis.service
