[package]
name = "mantis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mantis"
path = "src/main.rs"

[dependencies]
# Polymarket SDK — official (Polymarket GitHub org)
# Source: https://github.com/Polymarket/rs-clob-client
# Before writing any trader code, read:
#   examples/clob/authenticated.rs   <- order placement pattern
#   examples/clob/ws/                <- WebSocket subscription pattern
#   examples/approvals.rs            <- USDC allowance (run ONCE before trading)
polymarket-client-sdk = { version = "0.4", features = [
  "clob",
  "ws",
  "rtds",
  "gamma",
  "data",
  "heartbeats",
] }

# Fallback if above fails to resolve on crates.io:
# polymarket-client-sdk = { git = "https://github.com/Polymarket/rs-clob-client", branch = "main" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = "1"
rust_decimal_macros = "1"
dashmap = "6"
parking_lot = "0.12"
config = "0.14"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
